--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ button.agregado { background: #ddd !important; color: #888 !important; cursor: d
     right: 20px;
     width: 60px;
     height: 60px;
-    background-color: #333; 
+    background-color: #399ced; 
     color: white;
     border: none;
     border-radius: 50%;
